@@ -9,10 +9,12 @@ Crash Bandicoot
 - New feature: Add Stormy Ascent
 
 Crash Bandicoot 2: Cortex Strikes Back
+- New feature: Random/All Crates Are Covered Up
 - Randomize World Textures: Fixed not being able to build using this feature
 
 Crash Bandicoot: WARPED
 - New feature: Randomize Level Order
+- New feature: Random/All Crates Are Covered Up
 - Randomize World Textures: Fixed not being able to build using this feature
 
 1.3.0
